data/derived/sp14/progs/unify/prog1521.ml.out
Characters 27-53:
  concat (listReverse ( explode w)) == w;;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type string list
       Type char is not compatible with type string 
